[package]
name = "acorn"
version = "0.1.0"
authors = ["Tomas Jira"]

[dependencies]
ndarray-linalg = "=0.9.0" # https://crates.io/crates/ndarray-linalg
num-complex = "=0.4.6" # https://crates.io/crates/num-complex
ndarray = "=0.15.6" # https://crates.io/crates/ndarray
fftw = "=0.8.0" # https://crates.io/crates/fftw

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "acorn"
path = "src/main.rs"
